--- a/files/haproxy.cfg
+++ b/files/haproxy.cfg
@@ -62,11 +62,11 @@ frontend ssl
     acl this_payload payload(0,7) -m bin 5353482d322e30
     acl up-to ssl_fc_alpn -i h2
 
-    use_backend GRUP_XDVPN if up-to
+    #use_backend GRUP_XDVPN if up-to
     use_backend XDVPN if chk-02_up chk-02_ws 
     use_backend XDVPN if { path_reg -i ^\/(.*) }
     use_backend BOT_XDVPN if this_payload
-    default_backend CHANNEL_XDVPN
+    #default_backend CHANNEL_XDVPN
 
 backend recir_https_www
     mode tcp
@@ -76,15 +76,15 @@ backend XDVPN
     mode http
     server hencet-bau 127.0.0.1:1010 send-proxy check 
 
-backend GRUP_XDVPN
-    mode tcp
-    server hencet-baus 127.0.0.1:1013 send-proxy check
+#backend GRUP_XDVPN
+    #mode tcp
+    #server hencet-baus 127.0.0.1:1013 send-proxy check
     
-backend CHANNEL_XDVPN
-    mode tcp
-    balance roundrobin
-    server nonok-bau 127.0.0.1:1194 check
-    server memek-bau 127.0.0.1:1012 send-proxy check
+#backend CHANNEL_XDVPN
+    #mode tcp
+    #balance roundrobin
+    #server nonok-bau 127.0.0.1:1194 check
+    #server memek-bau 127.0.0.1:1012 send-proxy check
 
 backend BOT_XDVPN
     mode tcp
